[gd_scene format=3 uid="uid://b1630hxljapei"]

[ext_resource type="Script" uid="uid://diqbyhkg2fu6d" path="res://code/end_game_panel.gd" id="1_vxhgq"]
[ext_resource type="AudioStream" uid="uid://88ic288e6k4u" path="res://sounds/end_game_score.wav" id="2_0oy0p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 10
border_color = Color(0.7539839, 0.75398386, 0.75398386, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0oy0p"]
bg_color = Color(0, 0.5686275, 0.43529412, 1)
border_width_bottom = 4
border_color = Color(2.695322e-06, 0.78129715, 0.60249454, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mwtbl"]
bg_color = Color(0.7372549, 0.1882353, 0.4509804, 1)
border_width_bottom = 4
border_color = Color(0.93317384, 0.42782852, 0.6383777, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="EndGamePanel" type="Panel" unique_id=618119165]
visible = false
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jkv2x")
script = ExtResource("1_vxhgq")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=232946623]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1679403737]
layout_mode = 2
theme_override_constants/separation = 80

[node name="CountOfFishLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=59347028]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "KEY_FISH_EATEN"
horizontal_alignment = 1

[node name="AllScores" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1716886645]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "KEY_SCORE"
horizontal_alignment = 1

[node name="AgainLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=442277705]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "KEY_RELOAD"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1187353530]
layout_mode = 2

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=634570324]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_0oy0p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0oy0p")
theme_override_styles/hover = SubResource("StyleBoxFlat_0oy0p")
text = "KEY_YES"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=50676959]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_mwtbl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mwtbl")
theme_override_styles/hover = SubResource("StyleBoxFlat_mwtbl")
text = "KEY_NO"

[node name="AudioEndGameScore" type="AudioStreamPlayer" parent="." unique_id=1495391069]
stream = ExtResource("2_0oy0p")
volume_db = -20.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
